--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "bun-plugin-tailwind": "^0.0.15",
+    "color-convert": "^3.1.3",
     "react": "^19",
     "react-dom": "^19",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/bun": "latest",
+    "@types/color-convert": "^2.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "tailwind-merge": "^3.4.0"
   }
 }
