--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bun-plugin-tailwind": "^0.0.15",
     "color-convert": "^3.1.3",
+    "lunar-ts": "^1.0.0",
     "react": "^19",
     "react-dom": "^19",
     "tailwindcss": "^4.1.11"
