--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "bun run build.ts"
   },
   "dependencies": {
+    "@mantine/hooks": "^8.3.10",
     "bun-plugin-tailwind": "^0.0.15",
     "color-convert": "^3.1.3",
     "lunar-ts": "^1.0.0",
