--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/hooks": "^8.3.10",
     "bun-plugin-tailwind": "^0.0.15",
+    "clsx": "^2.1.1",
     "color-convert": "^3.1.3",
     "lunar-ts": "^1.0.0",
     "react": "^19",
