--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build & push to Docker Hub
+name: Release
 
 on:
   push:
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "build"
+  group: "release"
   cancel-in-progress: true
 
 env:
@@ -19,7 +19,7 @@ env:
 
 jobs:
   build:
-    name: Build the image
+    name: Release Docker image
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -39,3 +39,17 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ vars.DOCKER_IMAGE_NAME }}:latest
+
+  post:
+    name: Remote deployment
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: KessokuTeaTime/action-kessoku-private-ci@main
+        with:
+          auth: ${{ secrets.KTT_API_TOKEN }}
+          endpoint: ${{ vars.KTT_API_ENDPOINT }}
+          payload: |
+            {
+              "service_label": "${{ vars.SERVICE_LABEL }}"
+            }
